# ai-code-example

./: README.md  design.md  design.puml  openapi.yaml  prompt1.1_the_challenge.md  prompt1_design.md  prompt2_plantuml.md  prompt3_openapi.md  prompt4_tests.md  prompt5_application.md  pyproject.toml  shorty.py  test_shorty.py  tests.py
