[tool.poetry]
name = "ai-code-example"
version = "0.1.0"
description = ""
authors = ["Mike Thornton <361145+six8@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
connexion = "^2.14.2"
redis = "^4.5.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
freezegun = "^1.2.2"
fakeredis = "^2.14.1"
pytest-freezegun = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
