[tool.poetry]
name = "ai-code-example"
version = "0.1.0"
description = ""
authors = ["Mike Thornton <361145+six8@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13.0"
connexion = {extras = ["flask", "uvicorn"], version = "^3.0.5"}
redis = "^5.0.1"
freezegun = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
fakeredis = "2.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
